Fixed spacing issues in contact and issues with the image slide

--- a/css/contact.css
+++ b/css/contact.css
@@ -151,7 +151,7 @@ body {
 
 @media (max-width: 767px) {
   .title {
-    font-size: 10pt;
+    font-size: 18pt;
   }
 
   .contain-all {
